--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,10 @@
       },
 
       "content_scripts": [ {
-         "js": [ "jquery-2.1.1.min.js", "webslite.js", "unslider.js"],
-         "matches": [ "http://*/*", "https://*/*" ]
+          "matches": [ "http://*/*", "https://*/*" ],
+          "js": [ "jquery-2.1.1.min.js", "fotorama.js", "webslite.js"],
+          "css": [ "fotorama.css"]
+
       }],
 
       "permissions": [
