--- a/manifest.json
+++ b/manifest.json
@@ -6,16 +6,12 @@
       "version": "5.0",
 
       "browser_action": {
-        "default_icon": "icon.png",
-        "default_popup": "webslite.html"
+        "default_icon": "icon.png"
       },
 
-        /**
-      "page_action": {
-        "default_icon": { "38": "icon38.png"},
-        "default_popup": "webslite.html",
-        "default_title": "Webslite Premium 5.0"
-      },**/
+      "background":{
+        "scripts":["webslite_background.js"]
+      },
 
      "icons": {
         "16": "icon16.png",
@@ -25,13 +21,11 @@
 
       "content_scripts": [ {
           "matches": [ "http://*/*", "https://*/*" ],
-          "js": [ "jquery-2.1.1.min.js", "fotorama.js", "webslite.js"],
+          "js": [ "jquery-2.1.1.min.js", "fotorama.js", "webslite_in.js"],
           "css": [ "fotorama.css"]
-
       }],
 
       "permissions": [
-        "http://*/*",
-        "contentSettings"
+        "tabs", "http://*/*", "https://*/*"
       ]
     }
