--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
       "content_scripts": [ {
           "matches": [ "http://*/*", "https://*/*" ],
           "js": [ "js/jquery-2.1.1.min.js", "js/fotorama.js", "js/webslite_in.js"],
-          "css": [ "css/fotorama.css"]
+          "css": [ "css/webslite.css", "css/fotorama.css"]
       }],
 
       "permissions": [
